--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
         <!--goatcounter-->
         <script
-            data-goatcounter="https://offsocial.goatcounter.com/count"
+            data-goatcounter="https://clienttracking.goatcounter.com/count"
             async
             src="//gc.zgo.at/count.js"
         ></script>
