--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>HUGGIES</title>
+        <meta name="description" content="huggies near meme and dex app">
         <link rel="icon" href="/shit_icon_blue.svg" type="image/svg+xml" />
         <link rel="manifest" href="/manifest.json" />
         <meta name="theme-color" content="#000000" />
