--- a/public/index.html
+++ b/public/index.html
@@ -35,11 +35,11 @@
     </script>
 
     <!--goatcounter-->
-    <script
+    <!--<script
       data-goatcounter="https://clienttracking.goatcounter.com/count"
       async
       src="//gc.zgo.at/count.js"
-    ></script>
+    ></script>-->
 
     <!--👋 BYE-->
   </body>
